--- a/mars/src/main/res/layout/fragment_stores.xml
+++ b/mars/src/main/res/layout/fragment_stores.xml
@@ -30,7 +30,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/emailText"
-        android:hint="email"
+        android:hint="school id"
         android:layout_below="@+id/spinner"
         android:layout_alignStart="@+id/storeText"
         android:layout_alignParentEnd="true" />
@@ -51,19 +51,18 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:hint="name"
+        android:hint="full name"
         android:id="@+id/nameText"
-        android:layout_below="@+id/passwordText"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignTop="@+id/rankSpinner"
+        android:layout_alignParentEnd="true" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
         android:layout_below="@+id/nameText"
-        android:layout_alignStart="@+id/nameText"
-        android:id="@+id/linearLayout">
+        android:layout_alignParentStart="true">
 
         <EditText
             android:layout_width="wrap_content"
@@ -89,7 +88,7 @@
         android:ems="10"
         android:id="@+id/reasonText"
         android:hint="reason for order"
-        android:layout_below="@+id/linearLayout"
+        android:layout_below="@+id/sizenText"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -100,5 +99,23 @@
         android:id="@+id/orderButton"
         android:layout_below="@+id/reasonText"
         android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sizenText"
+        android:hint="size"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:inputType="text" />
+
+    <Spinner
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rankSpinner"
+        android:layout_below="@+id/passwordText"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
