Added news section

--- a/janus/src/main/res/layout/activity_main.xml
+++ b/janus/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.ddns.sabr.vulcan.MainActivity">
+    tools:context="net.ddns.sabr.janus.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
