Cleaned up some files and added strings to xml

--- a/janus/src/main/res/layout/activity_main.xml
+++ b/janus/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
+        android:text="@string/date"
         android:id="@+id/dateButton"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="NCO"
+        android:hint="@string/nco"
         android:ems="10"
         android:id="@+id/ncoView"
         android:layout_below="@+id/spinner"
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Officer"
+        android:hint="@string/officer"
         android:ems="10"
         android:id="@+id/officerView"
         android:layout_below="@+id/ncoView"
@@ -52,7 +52,7 @@
         android:id="@+id/uniformView"
         android:layout_below="@+id/officerView"
         android:layout_alignStart="@+id/officerView"
-        android:hint="Uniforn"
+        android:hint="@string/uniforn"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -63,13 +63,13 @@
         android:id="@+id/notesView"
         android:layout_below="@+id/uniformView"
         android:layout_alignStart="@+id/uniformView"
-        android:hint="Notes"
+        android:hint="@string/notes"
         android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upload"
+        android:text="@string/upload"
         android:id="@+id/uploadButton"
         android:layout_below="@+id/notesView"
         android:layout_centerHorizontal="true" />
