--- a/mars/src/main/res/menu/main.xml
+++ b/mars/src/main/res/menu/main.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item android:id="@+id/menu_prefrences"
-        android:title="Preferences"/>
+        android:title="@string/preferences"/>
 </menu>
