--- a/mars/src/main/res/menu/main.xml
+++ b/mars/src/main/res/menu/main.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+
+    <item android:id="@+id/menu_feedback"
+        android:title="@string/feedback"/>
+
     <item android:id="@+id/menu_prefrences"
         android:title="@string/preferences"/>
 </menu>
